stats updates, fixed sliding diamong img and section gaps

--- a/src/components/StatsNumbers/style.module.scss
+++ b/src/components/StatsNumbers/style.module.scss
@@ -17,17 +17,17 @@
 
 
   .statNumber1 {
-    font-size: 1.75em;
-    color: vars.$light-blue;
+    font-size: 5.5rem;
+    color: vars.$blue;
   }
 
   .statNumber2 {
-    font-size: 1.75em;
+    font-size: 5.5rem;
     color: vars.$red;
   }
 
   .statNumber3 {
-    font-size: 1.75em;
+    font-size: 5.5rem;
     color: vars.$yellow;
   }
   
